PO-901: Refactor step defs and update PO-832 payload to support submitted_by filtering and schema validation